fix/accordion_styles

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,67 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <style id="kl-custom-fonts">
+      @import 'https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap';
+      
+      @font-face {
+              font-family: 'GT America Regular'; 
+              src: url(https://cdn.shopify.com/s/files/1/0079/4332/3745/files/GT_America_Regular.ttf?v=1643201554);
+              font-weight: 400;
+              font-style: normal;
+              font-display: swap;
+            }
+      @font-face {
+              font-family: 'Maison Neue Bold'; 
+              src: url(https://cdn.shopify.com/s/files/1/0079/4332/3745/files/MaisonNeue-Bold_ddfa8f21-35f4-4166-add1-535c6742e0f3.woff?v=1602068961);
+              font-weight: 400;
+              font-style: normal;
+              font-display: swap;
+            }
+      @font-face {
+              font-family: 'Maison Neue Book'; 
+              src: url(https://cdn.shopify.com/s/files/1/0079/4332/3745/files/MaisonNeue-Book_dd3af39d-1771-4758-b2eb-fdd1fe83f0b7.woff?v=1602068971);
+              font-weight: 400;
+              font-style: normal;
+              font-display: swap;
+            }
+      @font-face {
+              font-family: 'Maison Neue Medium'; 
+              src: url(https://cdn.shopify.com/s/files/1/0079/4332/3745/files/MaisonNeue-Medium_68e52fe8-0590-4a7b-8234-beb53a35b1e0.woff?v=1602068979);
+              font-weight: 400;
+              font-style: normal;
+              font-display: swap;
+            }
+      @font-face {
+              font-family: 'MaisonNeueBold'; 
+              src: url(https://cdn.shopify.com/s/files/1/0079/4332/3745/files/MaisonNeue-Bold_ddfa8f21-35f4-4166-add1-535c6742e0f3.woff?v=1602068961);
+              font-weight: 400;
+              font-style: normal;
+              font-display: swap;
+            }
+      @font-face {
+              font-family: 'MaisonNeueBook'; 
+              src: url(https://cdn.shopify.com/s/files/1/0079/4332/3745/files/MaisonNeue-Book_dd3af39d-1771-4758-b2eb-fdd1fe83f0b7.woff?v=1602068971);
+              font-weight: 400;
+              font-style: normal;
+              font-display: swap;
+            }
+      @font-face {
+              font-family: 'MaisonNeueMedium'; 
+              src: url(https://cdn.shopify.com/s/files/1/0079/4332/3745/files/MaisonNeue-Medium_68e52fe8-0590-4a7b-8234-beb53a35b1e0.woff?v=1602068979);
+              font-weight: 400;
+              font-style: normal;
+              font-display: swap;
+            }
+      .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-font-poppins {font-family: 'Poppins'}
+      .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-font-gt-america-regular {font-family: 'GT America Regular'}
+      .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-font-maison-neue-bold {font-family: 'Maison Neue Bold'}
+      .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-font-maison-neue-book {font-family: 'Maison Neue Book'}
+      .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-font-maison-neue-medium {font-family: 'Maison Neue Medium'}
+      .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-font-maisonneuebold {font-family: 'MaisonNeueBold'}
+      .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-font-maisonneuebook {font-family: 'MaisonNeueBook'}
+      .kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1.kl-private-quill-wrapper-Lkqws1 .ql-font-maisonneuemedium {font-family: 'MaisonNeueMedium'}
+      </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
